# heater-microdrop-plugin-py

./: .gitignore  CHANGELOG.md  README.md  microdrop_plugin.toml  pyproject.toml
demos/: run_heater_controller_demo.py  run_heater_log_viewer_demo.py
heater_controller/: consts.py  data_logger.py  datamodels.py  heater_controller_base.py  heater_serial_proxy.py  plugin.py
heater_controller/interfaces/: i_heater_control_mixin_service.py
heater_controller/services/: heater_command_setter_service.py  heater_config_service.py  heater_firmware_upload_service.py  heater_monitor_mixin_service.py
heater_controller/tests/: test_config_push.py  test_heater_commands.py  test_heater_serial_proxy.py  test_protocol_temperature.py  test_stream_transitions.py
heater_controls_ui/: consts.py  controller.py  dock_pane.py  live_state.py  menus.py  message_handler.py  model.py  plugin.py  preferences.py  telemetry.py  view.py
heater_controls_ui/firmware_upload/: consts.py  controller.py
heater_controls_ui/plots/: __init__.py  canvas.py  consts.py  dock_pane.py  log_canvas.py  log_model.py  log_view.py  message_handler.py  model.py
heater_controls_ui/sensor_config/: controller.py  model.py  parsing.py  view.py
heater_controls_ui/tests/: test_model_and_listener.py  test_pid_toggle.py  test_plot_model.py  test_sensor_config.py
heater_protocol_controls/: consts.py  plugin.py
heater_protocol_controls/protocol_columns/: temperature_column.py
heater_protocol_controls/tests/: test_temperature_column.py
standalone_heater_app/: config.yml  controller.py  fail_safe.py  heater_control_ui.py
